--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
         "framework",
         "laravel"
     ],
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "php artisan optimize",
+        "chmod -R 777 public/"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
